# homework

./: CMakeLists.txt
.github/workflows/: cpp-ci.yml
tests/: 01-06test.cpp  13-18test.cpp  19-24test.cpp
